--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
+		<title>Javascript Image uploader</title>
 
-		<link rel="stylesheet" href="style.css" />
+		<link rel="stylesheet" href="./css/style.css" />
 
-		<script defer src="app.js"></script>
+		<script defer src="./js/app.js"></script>
 	</head>
 	<body>
 		<input type="file" name="file" id="file-input" />
