FIX: refactoring the code into functions

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	</head>
 	<body>
 		<header class="header">
-			<h1>Choose your photos and add a custom backgroud</h1>
+			<h1>Choose your photos and add a custom background</h1>
 		</header>
 		<main class="main">
 			<input type="file" multiple="false" accept="image/*" name="file" id="input" class="btn btn-input" />
